<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".VedenKirjaus">

    <TextView
        android:id="@+id/paivittainenTavoiteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="328dp"
        android:layout_marginBottom="51dp"
        android:text="@string/p_ivitt_inen_tavoite"
        android:textColor="@color/text"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/paivittainenTavoiteLuku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="64dp"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toEndOf="@+id/paivittainenTavoiteText"
        app:layout_constraintTop_toTopOf="@+id/paivittainenTavoiteText" />

    <TextView
        android:id="@+id/lasejaVettajuotuText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="48dp"
        android:text="@string/laseja_vett_juotu"
        android:textColor="@color/text"
        app:layout_constraintBottom_toTopOf="@+id/paivittainenTavoiteText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/juotujaLasejaVetta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="48dp"
        android:text="@string/_0"
        android:textColor="@color/text"
        app:layout_constraintBottom_toTopOf="@+id/paivittainenTavoiteLuku"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lasejaVettajuotuText" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="140dp"
        android:onClick="plus"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="140dp"
        android:onClick="minus"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4" />

</androidx.constraintlayout.widget.ConstraintLayout>